<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>bio_ik2_custom_costs</name>
	<version>0.0.0</version>
	<description> Custom cost functions for Bio-IK2 solver </description>
	<maintainer email="andrea.monguzzi@leonardo.com">Andrea Monguzzi</maintainer>
	<maintainer email="simone.giampa@leonardo.com">Simone Giampà</maintainer>
	<license>License Leonardo</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>geometry_msgs</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>Eigen3</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>tf2_geometry_msgs</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
	
</package>